--- a/Software/src/html/login.html
+++ b/Software/src/html/login.html
@@ -39,13 +39,14 @@
             padding: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
+            color: #000000; 
         }
 
         input[type="submit"] {
             width: 100px;
             padding: 8px;
             background-color: #470101;
-            color: #000000;
+            color: #ffffff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -53,7 +54,7 @@
 
         input[type="submit"]:hover {
             background-color: #4c0303;
-            color: #000000;
+            color: #ffffff;
 
         }
 
