--- a/Software/src/html/carros.html
+++ b/Software/src/html/carros.html
@@ -14,12 +14,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 50vh;
+            height: 100vh;
             flex-direction: column;
         }
 
         .container {
-            max-width: 800px;
+            max-width: 90%;
             margin: 20px auto;
             padding: 20px;
             background-color: #3e3d3d;
@@ -55,31 +55,94 @@
         .transmision {
             color: #777;
         }
+
+        label {
+            color: #ffffff;
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"],
+        input[type="number"],
+        input[type="submit"] {
+            width: calc(100% - 20px); 
+            padding: 5px;
+            margin-bottom: 10px;
+        }
+
+        @media screen and (min-width: 768px) {
+            .container {
+                max-width: 800px;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Lista de Carros</h1>
+        <form id="formulario-carro">
+            <label for="marca">Marca:</label>
+            <input type="text" id="marca" name="marca" required><br><br>
+            <label for="modelo">Modelo:</label>
+            <input type="text" id="modelo" name="modelo" required><br><br>
+            <label for="año">Año:</label>
+            <input type="number" id="año" name="año" required><br><br> 
+            <label for="transmision">Transmision:</label>
+            <input type="text" id="transmision" name="transmision" required><br><br>
+            <button type="submit">Agregar Carro</button>
+        </form>
+
         <table>
             <thead>
                 <tr>
                     <th>Carro ID</th>
                     <th>Marca</th>
                     <th>Modelo</th>
+                    <th>Año</th>
                     <th>Transmision</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tabla-carros">
                 {% for carro in carros %}
                 <tr>
                     <td>{{carro.CarroId}}</td>
                     <td>{{carro.Marca}}</td>
                     <td>{{carro.Modelo}}</td>
+                    <td>{{carro.Año}}</td>
                     <td>{{carro.Transmision}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
+
+    <script>
+        document.getElementById("formulario-carro").addEventListener("submit", function(event) {
+            event.preventDefault(); 
+
+            var marca = document.getElementById("marca").value;
+            var modelo = document.getElementById("modelo").value;
+            var año = document.getElementById("año").value; 
+            var transmision = document.getElementById("transmision").value;
+
+            var tabla = document.getElementById("tabla-carros");
+            var newRow = tabla.insertRow();
+
+            var cell1 = newRow.insertCell(0);
+            var cell2 = newRow.insertCell(1);
+            var cell3 = newRow.insertCell(2);
+            var cell4 = newRow.insertCell(3);
+            var cell5 = newRow.insertCell(4);
+
+            cell1.innerHTML = "";
+            cell2.innerHTML = marca;
+            cell3.innerHTML = modelo;
+            cell4.innerHTML = año;
+            cell5.innerHTML = transmision;
+
+            document.getElementById("formulario-carro").reset();
+        });
+    </script>
 </body>
 </html>
+
