--- a/Software/src/html/repuestos.html
+++ b/Software/src/html/repuestos.html
@@ -14,11 +14,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 50vh;
-            flex-direction: column;
+            min-height: 100vh; 
         }
 
         .container {
+            width: 90%; 
             max-width: 1000px;
             margin: 20px auto;
             padding: 20px;
@@ -30,11 +30,13 @@
         h1 {
             color: #ffffff;
             text-align: center;
+            margin-bottom: 20px; 
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px; 
         }
 
         th, td {
@@ -48,22 +50,55 @@
             background-color: #eaeaea;
         }
 
-        .nombre {
-            font-weight: bold;
+        form {
+            text-align: center;
         }
 
-        .categoria {
+        form label {
+            text-align: left;
             color: #ffffff;
+            display: block;
+            margin-bottom: 5px;
         }
-        
-        .precio {
-            color: #007bff;
+
+        form input {
+            width: calc(100% - 20px); 
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+
+        form button {
+            width: calc(100% - 20px); 
+            padding: 10px;
+            background-color: #007bff;
+            color: #ffffff;
+            border: none;
+            cursor: pointer;
+        }
+
+        @media screen and (min-width: 768px) {
+            .container {
+                width: 70%; 
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Lista de Repuestos</h1>
+        <form id="formulario-repuesto">
+            <label for="carro_id">Carro ID:</label>
+            <input type="text" id="carro_id" name="carro_id" required><br>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required><br>
+            <label for="categoria">Categoría:</label>
+            <input type="text" id="categoria" name="categoria" required><br>
+            <label for="precio_unitario">Precio Unitario:</label>
+            <input type="number" id="precio_unitario" name="precio_unitario" required><br>
+            <button type="submit">Agregar Repuesto</button>
+        </form>
+
         <table>
             <thead>
                 <tr>
@@ -71,10 +106,10 @@
                     <th>CarroID</th>
                     <th>Nombre</th>
                     <th>Categoria</th>
-                    <th>Precio_Unitario</th>
+                    <th>Precio Unitario</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tabla-repuestos">
                 {% for repuesto in repuestos %}
                 <tr>
                     <td>{{repuesto.RepuestoID}}</td>
@@ -87,5 +122,33 @@
             </tbody>
         </table>
     </div>
+
+    <script>
+        document.getElementById("formulario-repuesto").addEventListener("submit", function(event) {
+            event.preventDefault(); 
+
+            var carroId = document.getElementById("carro_id").value;
+            var nombre = document.getElementById("nombre").value;
+            var categoria = document.getElementById("categoria").value;
+            var precioUnitario = document.getElementById("precio_unitario").value;
+
+            var tabla = document.getElementById("tabla-repuestos");
+            var newRow = tabla.insertRow();
+
+            var cell1 = newRow.insertCell(0);
+            var cell2 = newRow.insertCell(1);
+            var cell3 = newRow.insertCell(2);
+            var cell4 = newRow.insertCell(3);
+            var cell5 = newRow.insertCell(4);
+
+            cell1.textContent = ""; 
+            cell2.textContent = carroId;
+            cell3.textContent = nombre;
+            cell4.textContent = categoria;
+            cell5.textContent = precioUnitario;
+
+            document.getElementById("formulario-repuesto").reset();
+        });
+    </script>
 </body>
 </html>
