--- a/Software/src/html/repuestos.html
+++ b/Software/src/html/repuestos.html
@@ -6,7 +6,7 @@
     <title>Lista de Repuestos</title>
     <style>
         body {
-            background-color: #570303;
+            background-image: url('../Imagenes/fondo1.jpg');
             background-size: cover; 
             font-family: Arial, sans-serif;
             margin: 0;
@@ -14,18 +14,21 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh; 
+            height: 100vh;
+            flex-direction: column;
         }
 
         .container {
-            width: 90%; 
-            max-width: 1000px;
+            max-width: 90%;
             margin: 20px auto;
             padding: 20px;
-            background-color: #3e3d3d;
-            border-radius: 8px;
+            background-image: url('../Imagenes/fondo2.jpg');
+            background-size: cover; 
+            background-position: center;
+            border-radius: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
 
         h1 {
             color: #ffffff;
@@ -36,13 +39,12 @@
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-bottom: 20px; 
         }
 
         th, td {
             padding: 10px;
             text-align: left;
-            border-bottom: 1px solid  #ffffff;
+            border: 1px solid #ffffff;
             color: #ffffff;
         }
 
@@ -147,7 +149,7 @@
             cell4.textContent = categoria;
             cell5.textContent = precioUnitario;
 
-            document.getElementById("formulario-repuesto").reset();
+ 
         });
     </script>
 </body>
