--- a/Software/src/html/carros.html
+++ b/Software/src/html/carros.html
@@ -6,7 +6,7 @@
     <title>Lista de Carros</title>
     <style>
         body {
-            background-color: #570303;
+            background-image: url('../Imagenes/fondo1.jpg');
             background-size: cover; 
             font-family: Arial, sans-serif;
             margin: 0;
@@ -22,8 +22,10 @@
             max-width: 90%;
             margin: 20px auto;
             padding: 20px;
-            background-color: #3e3d3d;
-            border-radius: 8px;
+            background-image: url('../Imagenes/fondo2.jpg');
+            background-size: cover; 
+            background-position: center;
+            border-radius: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -85,8 +87,6 @@
             <input type="text" id="marca" name="marca" required><br><br>
             <label for="modelo">Modelo:</label>
             <input type="text" id="modelo" name="modelo" required><br><br>
-            <label for="año">Año:</label>
-            <input type="number" id="año" name="año" required><br><br> 
             <label for="transmision">Transmision:</label>
             <input type="text" id="transmision" name="transmision" required><br><br>
             <button type="submit">Agregar Carro</button>
@@ -98,7 +98,6 @@
                     <th>Carro ID</th>
                     <th>Marca</th>
                     <th>Modelo</th>
-                    <th>Año</th>
                     <th>Transmision</th>
                 </tr>
             </thead>
