--- a/Software/src/html/invantario.html
+++ b/Software/src/html/invantario.html
@@ -14,12 +14,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh; /* Cambiado a 100vh para ocupar toda la pantalla */
+            height: 100vh;
             color: #ffffff; 
         }
 
         .container {
-            max-width: 90%; /* Cambiado a un ancho del 90% para que sea más adaptable */
+            max-width: 90%; 
             margin: 20px auto;
             padding: 20px;
             background-color: #3e3d3d;
@@ -30,7 +30,7 @@
         h1 {
             color: #ffffff;
             text-align: center;
-            margin-bottom: 20px; /* Añadido margen inferior para separar del formulario */
+            margin-bottom: 20px; 
         }
 
         table {
@@ -41,7 +41,9 @@
 
         th, td {
             padding: 10px;
-            border-bottom: 1px solid #ffffff;
+            text-align: left;
+            border: 1px solid #ffffff;
+            color: #ffffff;
         }
 
         tr:hover {
