--- a/Software/src/html/clientes.html
+++ b/Software/src/html/clientes.html
@@ -6,7 +6,7 @@
     <title>Lista de Clientes</title>
     <style>
         body {
-            background-color: #570303;
+            background-image: url('../Imagenes/fondo1.jpg');
             background-size: cover; 
             font-family: Arial, sans-serif;
             margin: 0;
@@ -14,15 +14,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 50vh;
+            height: 100vh;
             flex-direction: column;
         }
+
         .container {
-            max-width: 800px;
+            max-width: 90%;
             margin: 20px auto;
             padding: 20px;
-            background-color: #3e3d3d;
-            border-radius: 8px;
+            background-image: url('../Imagenes/fondo2.jpg');
+            background-size: cover; 
+            background-position: center;
+            border-radius: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
