--- a/Software/src/html/invantario.html
+++ b/Software/src/html/invantario.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Inventario</title>
     <style>
-        body {
-            background-color: #570303;
+       body {
+            background-image: url('../Imagenes/fondo1.jpg');
             background-size: cover; 
             font-family: Arial, sans-serif;
             margin: 0;
@@ -15,15 +15,17 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            color: #ffffff; 
+            flex-direction: column;
         }
 
         .container {
-            max-width: 90%; 
+            max-width: 90%;
             margin: 20px auto;
             padding: 20px;
-            background-color: #3e3d3d;
-            border-radius: 8px;
+            background-image: url('../Imagenes/fondo2.jpg');
+            background-size: cover; 
+            background-position: center;
+            border-radius: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
