--- a/Software/src/html/menu.html
+++ b/Software/src/html/menu.html
@@ -6,14 +6,14 @@
     <title>Menu</title>
     <style>
         body {
-            background-color: #750303;
+            background-image: url('../Imagenes/fondo1.jpg');
             background-size: cover; 
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: center; 
+            align-items: center;
             height: 100vh;
             flex-direction: column;
         }
