--- a/Software/src/html/vendedor_menu.html
+++ b/Software/src/html/vendedor_menu.html
@@ -6,17 +6,18 @@
     <title>Vendedor</title>
     <style>
         body {
-            background-color: #750303;
+            background-image: url('../Imagenes/fondo1.jpg');
             background-size: cover; 
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: center; 
+            align-items: center;
             height: 100vh;
             flex-direction: column;
         }
+
 
         h1 {
             margin-top: 20px; 
