--- a/Software/src/html/menu.html
+++ b/Software/src/html/menu.html
@@ -31,7 +31,9 @@
             max-width: 200px;
             margin: 10px;
             padding: 20px;
-            background-color: #3e3d3d;
+            background-image: url('../Imagenes/fondo2.jpg');
+            background-size: cover; 
+            background-position: center;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             color: #ffffff;
