--- a/Software/src/html/contador_menu.html
+++ b/Software/src/html/contador_menu.html
@@ -31,8 +31,9 @@
             max-width: 300px;
             margin: 10px;
             padding: 20px;
-            background-color: #3e3d3d;
-            border-radius: 8px;
+            background-image: url('../Imagenes/fondo2.jpg');
+            background-size: cover; 
+            background-position: center;            border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             color: #ffffff;
             line-height: 1.4;
@@ -50,13 +51,13 @@
 <body>
     <h1>Contador</h1>
     <div class="button-container">
-        <a href="{% url 'gastos' %}"><button>Gastos</button></a>
-        <a href="{% url 'pagos' %}"><button>Pagos</button></a>
-        <a href="{% url 'comisiones' %}"><button>Comisiones</button></a>
+        <a href="gastos.html"><button>Gastos</button></a>
+        <a href="pagos.html"><button>Pagos</button></a>
+        <a href="comisiones.html"><button>Comisiones</button></a>
     </div>
     <div class="button-container">
-        <a href="{% url 'ventas' %}"><button>Ventas Mensuales</button></a>
-        <a href="{% url 'cierre_mensual' %}"><button>Cierre Mensual</button></a>
+        <a href="ventas.html"><button>Ventas Mensuales</button></a>
+        <a href="cierre_mensual.html"><button>Cierre Mensual</button></a>
     </div>
 </body>
 </html>
