--- a/Software/src/html/menu.html
+++ b/Software/src/html/menu.html
@@ -52,12 +52,12 @@
 <body>
     <h1>Menu</h1>
     <div class="button-container">
-        <a href="{% url 'admin' %}"><button>Administrador</button></a>
-        <a href="{% url 'contador' %}"><button>Contador</button></a>
+        <a href="admin_menu.html"><button>Administrador</button></a>
+        <a href="contador_menu.html"><button>Contador</button></a>
     </div>
     <div class="button-container">
-        <a href="{% url 'vendedor_menu' %}"><button>Vendedor</button></a>
-        <a href="{% url 'comprador' %}"><button>Comprador</button></a>
+        <a href="vendedor_menu.html"><button>Vendedor</button></a>
+        <a href="comprador_menu.html"><button>Comprador</button></a>
     </div>
 </body>
 </html>
