--- a/Software/src/html/admin_menu.html
+++ b/Software/src/html/admin_menu.html
@@ -31,7 +31,9 @@
             max-width: 300px;
             margin: 10px;
             padding: 20px;
-            background-color: #3e3d3d;
+            background-image: url('../Imagenes/fondo2.jpg');
+            background-size: cover; 
+            background-position: center;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             color: #ffffff;
@@ -50,12 +52,15 @@
 <body>
     <h1>Administrador</h1>
     <div class="button-container">
-        <a href="{% url 'pagos' %}"><button>Pagos</button></a>
+        <a href="{% url 'lista_pagos' %}"><button>Pagos</button></a>
         <a href="{% url 'cierres_mensuales' %}"><button>Cierres Mensuales</button></a>
     </div>
     <div class="button-container">
-        <a href="{% url 'empleados' %}"><button>Empleados</button></a>
+        <a href="{% url 'lista_empleados' %}"><button>Empleados</button></a>
         <a href="{% url 'control_usuario' %}"><button>Control de Usuario</button></a>
+    </div>
+    <div class="button-container">
+        <a href="{% url 'logout' %}"><button>Cerrar Sesion</button></a>
     </div>
 </body>
 </html>
