--- a/Software/src/html/vendedor_menu.html
+++ b/Software/src/html/vendedor_menu.html
@@ -32,8 +32,9 @@
             max-width: 200px;
             margin: 10px;
             padding: 20px;
-            background-color: #3e3d3d;
-            border-radius: 8px;
+            background-image: url('../Imagenes/fondo2.jpg');
+            background-size: cover; 
+            background-position: center;            border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             color: #ffffff;
             line-height: 1.4;
@@ -51,11 +52,11 @@
 <body>
     <h1>Vendedor</h1>
     <div class="button-container">
-        <a href="{% url 'inventario' %}"><button>Inventario</button></a>
+        <a href="inventario.html"><button>Inventario</button></a>
     </div>
     <div class="button-container">
-        <a href="{% url 'venta' %}"><button>Venta</button></a>
-        <a href="{% url 'cotizacion' %}"><button>Cotización</button></a>
+        <a href="ventas.html"><button>Venta</button></a>
+        <a href="cotizaciones.html"><button>Cotización</button></a>
     </div>
 </body>
 </html>
