botones funcionales para el menu del administrador

--- a/Software/src/html/admin_menu.html
+++ b/Software/src/html/admin_menu.html
@@ -52,15 +52,14 @@
 <body>
     <h1>Administrador</h1>
     <div class="button-container">
-        <a href="{% url 'lista_pagos' %}"><button>Pagos</button></a>
-        <a href="{% url 'cierres_mensuales' %}"><button>Cierres Mensuales</button></a>
+        <a href="cierres_mensuales.html"><button>Cierres Mensuales</button></a>
     </div>
     <div class="button-container">
-        <a href="{% url 'lista_empleados' %}"><button>Empleados</button></a>
-        <a href="{% url 'control_usuario' %}"><button>Control de Usuario</button></a>
+        <a href="empleado.html"><button>Empleados</button></a>
+        <a href="usuarios.html"><button>Control de Usuario</button></a>
     </div>
     <div class="button-container">
-        <a href="{% url 'logout' %}"><button>Cerrar Sesion</button></a>
+        <a href="logout"><button>Cerrar Sesion</button></a>
     </div>
 </body>
 </html>
