--- a/Software/src/html/vendedor_menu.html
+++ b/Software/src/html/vendedor_menu.html
@@ -32,7 +32,7 @@
             max-width: 200px;
             margin: 10px;
             padding: 20px;
-            background-image: url('../Imagenes/fondo2.jpg');
+            background-color: #B58D82;
             background-size: cover; 
             background-position: center;            border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
