--- a/Software/src/html/cambios_salarios.html
+++ b/Software/src/html/cambios_salarios.html
@@ -22,7 +22,7 @@
             max-width: 90%;
             margin: 20px auto;
             padding: 20px;
-            background-image: url('../Imagenes/fondo2.jpg');
+            background-color: #B58D82;
             background-size: cover; 
             background-position: center;
             border-radius: 20px;
@@ -44,7 +44,7 @@
             background-color: #f9f9f9;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            color: #000000;
+            color: #ffffff;
 
         }
         li:hover {
