--- a/Software/src/html/historial_cambio.html
+++ b/Software/src/html/historial_cambio.html
@@ -22,7 +22,7 @@
             max-width: 90%;
             margin: 20px auto;
             padding: 20px;
-            background-image: url('../Imagenes/fondo2.jpg');
+            background-color: #B58D82;
             background-size: cover; 
             background-position: center;
             border-radius: 20px;
