--- a/Software/src/html/menu.html
+++ b/Software/src/html/menu.html
@@ -31,7 +31,7 @@
             max-width: 200px;
             margin: 10px;
             padding: 20px;
-            background-image: url('../Imagenes/fondo2.jpg');
+            background-color: #B58D82;
             background-size: cover; 
             background-position: center;
             border-radius: 8px;
